force-app/main/default/objects/Resourcing__c/Resourcing__c.object-meta.xml
<CustomObject>
    <description>Object for storing number of hours that Agent has spend working on opportunity during given week [SFP-4974]</description>
    <label>Resourcing</label>
    <nameField>
        <displayFormat>R-{00000000}</displayFormat>
        <label>Resourcing Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resourcing</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>