force-app/main/default/objects/Resourcing__c/fields/Compound_Key__c.field-meta.xml
<CustomField>
    <fullName>Compound_Key__c</fullName>
    <description>Backend field used to identify duplicates, should not be used in layouts. Field consists of Opportunity__c, Resource__c and Week_End_Date__c [SFP-4974]</description>
    <label>Compound Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>