force-app/main/default/objects/Resourcing__c/fields/Initiative__c.field-meta.xml
<CustomField>
    <fullName>Initiative__c</fullName>
    <description>Free text field where the Banker can input additional details about the initiative
[SFP-4978]</description>
    <inlineHelpText>Additional details regarding the initiative</inlineHelpText>
    <label>Initiative</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administration</fullName>
            </value>
            <value>
                <fullName>Internal strategy</fullName>
            </value>
            <value>
                <fullName>Leave</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Recruitment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>