force-app/main/default/objects/Resourcing__c/fields/Intensity_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Intensity_Forecast__c</fullName>
    <description>Bankers can pick from the following list of values:

Full
High
Medium
Low
Inactive
[SFP-4974]</description>
    <inlineHelpText>Please provide the anticipated intensity for the week ahead. Indicative intensity guidance:

Full – Greater than 50 hours

High – Between 30 and 50 hours

Medium – Between 10 and 30 hours

Low – Between 0 and 10 hours

Inactive –0 hours</inlineHelpText>
    <label>Intensity Forecast</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>