force-app/main/default/objects/Resourcing__c/fields/Milestone__c.field-meta.xml
<CustomField>
    <fullName>Milestone__c</fullName>
    <label>Milestone</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Opportunity_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Identify and engage merger target</fullName>
            </value>
            <value>
                <fullName>Detailed evaluation of merger target and merger discussions</fullName>
            </value>
            <value>
                <fullName>Due diligence</fullName>
            </value>
            <value>
                <fullName>Execute transaction</fullName>
            </value>
            <value>
                <fullName>Transaction awaiting shareholder &amp; regulatory approvals</fullName>
            </value>
            <value>
                <fullName>Conditions precedent met: Deal closed</fullName>
            </value>
            <value>
                <fullName>Shareholder engagement</fullName>
            </value>
            <value>
                <fullName>Identify and engage M&amp;A target</fullName>
            </value>
            <value>
                <fullName>Detailed evaluation of target</fullName>
            </value>
            <value>
                <fullName>Non-binding offer submitted</fullName>
            </value>
            <value>
                <fullName>Offer through to next round</fullName>
            </value>
            <value>
                <fullName>Binding offer submitted</fullName>
            </value>
            <value>
                <fullName>Prepare company for sale</fullName>
            </value>
            <value>
                <fullName>Send IM to interested buyers</fullName>
            </value>
            <value>
                <fullName>Expressions of interest received</fullName>
            </value>
            <value>
                <fullName>Formal offers received</fullName>
            </value>
            <value>
                <fullName>Offer accepted &amp; execute transaction</fullName>
            </value>
            <value>
                <fullName>Engage and advise company on BEE transaction</fullName>
            </value>
            <value>
                <fullName>Negotiate structure and pricing</fullName>
            </value>
            <value>
                <fullName>Funding confirmation</fullName>
            </value>
            <value>
                <fullName>Regulatory engagement</fullName>
            </value>
            <value>
                <fullName>Shareholder approvals (if applicable)</fullName>
            </value>
            <value>
                <fullName>Transaction awaiting regulatory approval</fullName>
            </value>
            <value>
                <fullName>Engage and prepare company for listing</fullName>
            </value>
            <value>
                <fullName>Due diligence/ Documentation</fullName>
            </value>
            <value>
                <fullName>Public launch (ITF)</fullName>
            </value>
            <value>
                <fullName>IPO roadshows</fullName>
            </value>
            <value>
                <fullName>Book building and allocations</fullName>
            </value>
            <value>
                <fullName>Company IPOs, settlement and after-market stabilisation</fullName>
            </value>
            <value>
                <fullName>Deal closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>