force-app/main/default/objects/Resourcing__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Automatically populated with the opportunity name
[SFP-4974]</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Resourcings</relationshipLabel>
    <relationshipName>Resourcings</relationshipName>
    <type>Lookup</type>
</CustomField>