force-app/main/default/objects/Resourcing__c/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <description>List of transaction type values that bankers can choose from:

BEE
Buy Side
Equity Capital Raise
IPO
Merger
Sell Side

[SFP-4974]</description>
    <label>Opportunity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buy Side - Public</fullName>
            </value>
            <value>
                <fullName>Buy Side - Private</fullName>
            </value>
            <value>
                <fullName>Sell Side - Public</fullName>
            </value>
            <value>
                <fullName>Sell Side - Private</fullName>
            </value>
            <value>
                <fullName>Merger - Public</fullName>
            </value>
            <value>
                <fullName>Merger - Private</fullName>
            </value>
            <value>
                <fullName>BEE</fullName>
            </value>
            <value>
                <fullName>IPO</fullName>
            </value>
            <value>
                <fullName>ABB</fullName>
            </value>
            <value>
                <fullName>Rights Offer</fullName>
            </value>
            <value>
                <fullName>Strategic review</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Buy Side</fullName>
                <isActive>false</isActive>
                <label>Buy Side</label>
            </value>
            <value>
                <fullName>Equity Capital Raise</fullName>
                <isActive>false</isActive>
                <label>Equity Capital Raise</label>
            </value>
            <value>
                <fullName>Merger</fullName>
                <isActive>false</isActive>
                <label>Merger</label>
            </value>
            <value>
                <fullName>Sell Side</fullName>
                <isActive>false</isActive>
                <label>Sell Side</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>