force-app/main/default/objects/Resourcing__c/fields/Previous_Week_Resourcing__c.field-meta.xml
<CustomField>
    <fullName>Previous_Week_Resourcing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>[SFP-7953] - backend field for lookup to previous week resourcing. It is matched in the trigger by comparing initiative, opportunity, resource and week end date.</description>
    <inlineHelpText>Previous week resourcing for the same opportunity or initiative.</inlineHelpText>
    <label>Previous Week Resourcing</label>
    <referenceTo>Resourcing__c</referenceTo>
    <relationshipLabel>Next Week Resourcing</relationshipLabel>
    <relationshipName>Next_Week_Resourcing</relationshipName>
    <type>Lookup</type>
</CustomField>