force-app/main/default/objects/Resourcing__c/fields/Previous_Week_Time_Spent__c.field-meta.xml
<CustomField>
    <fullName>Previous_Week_Time_Spent__c</fullName>
    <description>[SFP-7953] - time spent on opportunity or initiative in the previous week</description>
    <formula>IF(
    Previous_Week_Resourcing__c  &lt;&gt; null,
    Previous_Week_Resourcing__r.Time_Spent__c ,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Time spent on opportunity or initiative in the previous week.</inlineHelpText>
    <label>Previous Week Time Spent (hours)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>