force-app/main/default/objects/Resourcing__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the banker who has done the work. Same value as owner field. [SFP-4974]</description>
    <inlineHelpText>Name of the banker</inlineHelpText>
    <label>Resource</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Business_Unit__c</field>
            <operation>equals</operation>
            <valueField>$User.Business_Unit__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Resourcings</relationshipName>
    <type>Lookup</type>
</CustomField>