force-app/main/default/objects/Resourcing__c/fields/Resourcing_Focus__c.field-meta.xml
<CustomField>
    <fullName>Resourcing_Focus__c</fullName>
    <description>Field indicating the focus of the resourcing [SFP-4978]</description>
    <formula>IF(
				 RecordType.DeveloperName = &apos;Opportunity_Unrelated&apos;,  TEXT(Initiative__c), Opportunity__r.Name
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resourcing Focus</label>
    <type>Text</type>
</CustomField>