force-app/main/default/objects/Resourcing__c/fields/Time_Spent__c.field-meta.xml
<CustomField>
    <fullName>Time_Spent__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of hours worked in the week on the opportunity [SFP-4974]</description>
    <inlineHelpText>Number of hours worked this week on the opportunity or initiative</inlineHelpText>
    <label>Time Spent (Hours)</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>