force-app/main/default/objects/Resourcing__c/fields/Week_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Week_End_Date__c</fullName>
    <defaultValue>TODAY() + (6 - WEEKDAY( TODAY() ))</defaultValue>
    <description>Date of the end of the business week [SFP-4974]</description>
    <inlineHelpText>Date of the end of the business week</inlineHelpText>
    <label>Week End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>