force-app/main/default/objects/Resourcing__c/fields/Week_Of_The_Year__c.field-meta.xml
<CustomField>
    <fullName>Week_Of_The_Year__c</fullName>
    <description>Week of the year for the resourcing week start date [SFP-4974]</description>
    <formula>CEILING( ( Week_Start_Date__c - DATE( YEAR( Week_Start_Date__c ), 1, 1) + 1) / 7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Week of the year for the resourcing week start date</inlineHelpText>
    <label>Week Of The Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>