force-app/main/default/objects/Resourcing__c/fields/Week_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Week_Start_Date__c</fullName>
    <description>Automatically populated with Monday&apos;s date of that week [SFP-4974]</description>
    <formula>Week_End_Date__c  - MOD(Week_End_Date__c - DATE(2021,1,4),7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Automatically populated with Monday&apos;s date of the week</inlineHelpText>
    <label>Week Start Date</label>
    <type>Date</type>
</CustomField>