force-app/main/default/objects/Resourcing__c/recordTypes/Initiative_Resourcing.recordType-meta.xml
<RecordType>
    <fullName>Initiative_Resourcing</fullName>
    <active>true</active>
    <description>Record type for tracking time for activities not related to the opportunities</description>
    <label>Initiative Resourcing</label>
</RecordType>