force-app/main/default/objects/Resourcing__c/recordTypes/Opportunity_Resourcing.recordType-meta.xml
<RecordType>
    <fullName>Opportunity_Resourcing</fullName>
    <active>true</active>
    <description>For tracking time for activities related to the opportunity</description>
    <label>Opportunity Resourcing</label>
</RecordType>