force-app/main/default/objects/Resourcing__c/validationRules/Initiative_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Initiative_Required</fullName>
    <active>true</active>
    <description>Initiative has to be selected for resourcing not related to opportunity [SFP-4978]</description>
    <errorConditionFormula>AND( RecordType.DeveloperName = &apos;Initiative_Resourcing&apos;,
ISBLANK( TEXT(Initiative__c) ) )</errorConditionFormula>
    <errorMessage>Initiative has to be selected</errorMessage>
</ValidationRule>