force-app/main/default/objects/Resourcing__c/validationRules/Max_number_of_hours_in_week.validationRule-meta.xml
<ValidationRule>
    <fullName>Max_number_of_hours_in_week</fullName>
    <active>true</active>
    <description>Time spent can&apos;t exceed number of hours in a week (168) [SFP-4974]</description>
    <errorConditionFormula>Time_Spent__c &gt; 168</errorConditionFormula>
    <errorMessage>Time spent can&apos;t exceed number of hours in a week (168)</errorMessage>
</ValidationRule>