force-app/main/default/objects/Resourcing__c/validationRules/Opp_Related_Only_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Opp_Related_Only_Fields</fullName>
    <active>false</active>
    <description>Opportunity, Opportunity Type and Intensity Forecast are allowed on Opportunity_Resourcing record type only [SFP-4978]</description>
    <errorConditionFormula>AND(RecordType.DeveloperName &lt;&gt; &apos;Opportunity_Resourcing&apos;,
OR(
NOT(ISBLANK(TEXT(Intensity_Forecast__c))),
NOT(ISBLANK( Opportunity__c ))),
NOT(ISBLANK(TEXT(Opportunity_Type__c)))
)</errorConditionFormula>
    <errorMessage>Opportunity, Opportunity Type and Intensity Forecast are allowed on opportunity resourcing records only</errorMessage>
</ValidationRule>