force-app/main/default/objects/Resourcing__c/validationRules/Opp_Related_Required_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Opp_Related_Required_Fields</fullName>
    <active>true</active>
    <description>Opportunity and Intensity Forecast have to be selected for Opportunity_Resourcing record type [SFP-4974]</description>
    <errorConditionFormula>AND(RecordType.DeveloperName = &apos;Opportunity_Resourcing&apos;,
			OR(
            ISBLANK(TEXT(Intensity_Forecast__c)),
            ISBLANK( Opportunity__c ),
            AND( NOT(ISNEW()) , ISBLANK(TEXT(Opportunity_Type__c)))
			)
			)</errorConditionFormula>
    <errorMessage>Opportunity, Opportunity Type or Intensity Forecast not selected</errorMessage>
</ValidationRule>