force-app/main/default/objects/Resourcing__c/validationRules/Resource_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Resource_Required</fullName>
    <active>true</active>
    <description>Resource (User lookup) field can not be left blank [SFP-4974]</description>
    <errorConditionFormula>ISBLANK(Resource__c)</errorConditionFormula>
    <errorDisplayField>Resource__c</errorDisplayField>
    <errorMessage>Select Resource</errorMessage>
</ValidationRule>