force-app/main/default/objects/Resourcing__c/validationRules/Week_End_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Week_End_Validation</fullName>
    <active>true</active>
    <description>Week end has to be Friday [SFP-4974]</description>
    <errorConditionFormula>WEEKDAY( Week_End_Date__c ) &lt;&gt; 6</errorConditionFormula>
    <errorMessage>Week end has to be Friday</errorMessage>
</ValidationRule>