force-app/main/default/objects/Resourcing__c/listViews/My_Initiative_Resourcing_Last_week.listView-meta.xml
<ListView>
    <fullName>My_Initiative_Resourcing_Last_week</fullName>
    <columns>NAME</columns>
    <columns>Resource__c</columns>
    <columns>Week_Start_Date__c</columns>
    <columns>Week_End_Date__c</columns>
    <columns>Time_Spent__c</columns>
    <columns>Previous_Week_Time_Spent__c</columns>
    <columns>Initiative__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Week_End_Date__c</field>
        <operation>equals</operation>
        <value>LAST_WEEK</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Resourcing__c.Initiative_Resourcing</value>
    </filters>
    <label>My Initiative Resourcing Last week</label>
    <sharedTo>
        <roleAndSubordinatesInternal>CIB_Global_IB_Corporate_Finance_Business_Unit</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>